clean up pom