@@ -83,6 +83,18 @@
   <plugins>
 
     <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-compiler-plugin</artifactId>
+      <version>3.13.0</version>
+      <configuration>
+        <compilerArgs>
+          <arg>-Xlint:deprecation</arg>
+          <arg>-Xlint:unchecked</arg>
+        </compilerArgs>
+      </configuration>
+    </plugin>
+
+    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>3.2.5</version>
@@ -106,21 +118,13 @@
               <argument>--add-opens=java.base/java.lang=ALL-UNNAMED</argument>
               <argument>--add-opens=java.base/java.util=ALL-UNNAMED</argument>
               <argument>--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED</argument>
+              <argument>--enable-native-access=ALL-UNNAMED</argument>
               <argument>-Djava.awt.headless=false</argument>
               <argument>-cp</argument>
               <classpath/>
               <argument>GraphvizApp</argument>
             </arguments>
           </configuration>
-
-        <executions>
-          <execution>
-            <id>run-app</id>
-            <goals>
-              <goal>java</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 
 <plugin>
